Update linx device to abstract class

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "outDir": "./dist"
   },
   "files": [
-    "src/linx-device.ts",
+    "src/generic-linx-device.ts",
     "src/generic-transport.ts"
   ]
 }
